--- a/main_d.css
+++ b/main_d.css
@@ -23,7 +23,7 @@ body {
 }
 
 #prc {
-    font-family: "ff-enzo-web";
+    font-family: "Macho";
     font-weight: 300;
     font-size: 34pt;
     color: #ff9c00;
