--- a/main_d.css
+++ b/main_d.css
@@ -25,6 +25,7 @@ body {
 
 #prc {
     font-family: "Macho";
+    font-family: "Lato";
     font-weight: 300;
     font-size: 34pt;
     color: #ff9c00;
