--- a/main_d.css
+++ b/main_d.css
@@ -17,8 +17,8 @@ body {
 }
 
 #swordsr {
-    font-family: "Macho";
-    font-weight: 300;
+    font-family: roboto, sans-serif;
+    font-weight: 200;
     font-size: 18pt;
 }
 
