--- a/main_d.css
+++ b/main_d.css
@@ -12,8 +12,8 @@ body {
 }
 
 #swordname {
-    font-family: "Classico-URW";
-    font-size: 40pt;
+    font-family: classico-urw, sans-serif;
+    font-size: 400pt;
 }
 
 #swordsr {
