--- a/main_d.css
+++ b/main_d.css
@@ -13,7 +13,8 @@ body {
 
 #swordname {
     font-family: classico-urw, sans-serif;
-    font-size: 400pt;
+    font-weight: 400;
+    font-size: 40pt;
 }
 
 #swordsr {
